--- a/index/tes1.html
+++ b/index/tes1.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Your Title</title>
+    <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body>
+<h2 class="line">Users List</h2>
 <div id="wrapper"></div>
 <script src="tes1.js"></script>
 </body>
