--- a/post-details/post-details.html
+++ b/post-details/post-details.html
@@ -1,12 +1,18 @@
+<!-- post-details.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Post Details</title>
+    <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body>
-<h1>post-details</h1>
-
+<div id="post-info">
+    <!-- Здесь будет информация о посте -->
+</div>
+<div id="comments">
+    <!-- Здесь будут комментарии к посту -->
+</div>
 <script src="post-details.js"></script>
 </body>
 </html>
