--- a/users-details/test2.html
+++ b/users-details/test2.html
@@ -6,9 +6,12 @@
     <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body>
-<h2>TWO</h2>
-<div id="wrap"></div>
-<div id="user-posts-details"></div>
+
+<div class="usersbg">
+    <h2>TWO</h2>
+    <div id="wrap"></div>
+    <div id="user-posts-details"></div>
+</div>
 <script src="test2.js"></script>
 </body>
 </html>
